--- a/index.html
+++ b/index.html
@@ -3,20 +3,6 @@
 <head>
 	<title>Problem Uno</title>
 	<!-- This function will print out all of the prime numbers between 0 and 100 -->
-<script>
-function isPrime(num) {
-    // if(num < 2) return false;
-    for (var i = 2; i < num; i++) {
-        if(num%i==0)
-            return "that's all, folks";
-    }
-    return true;
-}
-for(var i = 0; i < 100; i++){
-    if(isPrime(i)) console.log(i);
-}
-console.log(isPrime(100));
-</script>
 <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
@@ -59,12 +45,11 @@ console.log(isPrime(100));
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Problem Uno</h1>
+                <h1>Home</h1>
                 <br>
             </div>
         </div>
 
-  <!-- write out the div id that will display the prime numbers in the broswer below -->
 
 </body>
 </html>
