added some more text

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <!-- /.container -->
     </nav>
 
+<div class="container-fluid">
+
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Home</h1>
@@ -50,6 +52,20 @@
             </div>
         </div>
 
+            <div class ="row-fluid">
+        <div class="span4">
+            <div class="caption-full">
+                <p class="lead">Thank you so much for taking the time to go over my code quiz problems! This little challenge was a lot of fun, and I thoroughly enjoyed piecing these bits of code together to make everything work. I hope that you find that my answers are satisfactory, and I look forward to hearing from you!!
+                <br>
+                <br>
+                Sincerely,
+                <br>
+                Stephen Young
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
