--- a/Problem1.html
+++ b/Problem1.html
@@ -64,6 +64,13 @@ console.log(isPrime(100));
             </div>
         </div>
 
+            <div class ="row-fluid">
+        <div class="span4">
+            <div class="caption-full text-center">
+                <p class="lead"><b>Question:</b> Write a function to print out the first 100 prime numbers.
+                </p>
+            </div>
+
   <!-- write out the div id that will display the prime numbers in the broswer below -->
 
 </body>
