fixed spacing on problem2 page

--- a/Problem2.html
+++ b/Problem2.html
@@ -41,16 +41,25 @@
         </div>
         <!-- /.container -->
     </nav>
-
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1>Problem Dos</h1>
-                <br>
-            </div>
-        </div>
-
 <div class="container-fluid">
-	<div class ="row">
+
+  <div class="row">
+      <div class="col-lg-12 text-center">
+          <h1>Problem Dos</h1>
+          <br>
+      </div>
+  </div>
+
+	<div class="row">
+    <div class="span4">
+        <div class="caption-full text-center">
+            <p class="lead"><b>Question:</b> Using the DOM APIs, write a routine to change every paragraph in a contenteditable div into a blockquote.
+            </p>
+        </div>
+    </div>
+  </div>
+
+	<div class ="row-fluid">
 		<div class="span4">
 			<p class="lead">
 			Squid bitters Etsy Tumblr, VHS letterpress gluten-free gentrify ugh deep v selvage disrupt cold-pressed. Butcher narwhal scenester Banksy selvage. Leggings typewriter cray pickled synth raw denim, roof party organic farm-to-table sartorial Banksy iPhone. Salvia Truffaut flexitarian, post-ironic vinyl meditation ennui freegan ugh readymade. Bespoke before they sold out church-key, quinoa gastropub paleo organic raw denim lomo. Twee  PBR&B, Helvetica skateboard artisan letterpress. VHS High Life mumblecore chia asymmetrical, blog yr Banksy.
@@ -62,14 +71,10 @@
 			YOLO leggings Etsy, artisan flexitarian American Apparel Carles chillwave shabby chic sustainable PBR yr deep v cold-pressed. Letterpress small batch Marfa Pinterest, artisan Carles DIY yr tofu vegan occupy PBR&B. Keffiyeh Intelligentsia sriracha, beard before they sold out fixie +1 forage retro hoodie normcore Helvetica Thundercats tousled. Four dollar toast twee Neutra tofu trust fund, ethical readymade Bushwick listicle vinyl wolf sartorial banh mi scenester. Farm-to-table mixtape Pinterest, direct trade Bushwick American Apparel semiotics meditation irony Blue Bottle synth forage cray. Hella kale chips chillwave meh. Brooklyn yr put a bird on it, McSweeney's pop-up Bushwick cliche tilde retro post-ironic deep v forage.
 			<br>
 			<br>
-			Helvetica hoodie seitan beard chia pork belly, tofu small batch swag skateboard flexitarian biodiesel artisan Shoreditch heirloom. Street art craft beer YOLO health goth Shoreditch, Tumblr kogi Williamsburg butcher Godard. Mlkshk wolf keytar skateboard, American Apparel PBR&B kitsch church-key beard. Meh deep v normcore, yr tilde Kickstarter chambray viral. Keytar blog squid migas, church-key post-ironic PBR ugh tousled. Cardigan chia before they sold out, Williamsburg Schlitz pickled Vice viral authentic. Deep v messenger bag tofu, pork belly next level keytar authentic narwhal Blue Bottle meh.
-			<br>
-			<br>	
+			Helvetica hoodie seitan beard chia pork belly, tofu small batch swag skateboard flexitarian biodiesel artisan Shoreditch heirloom. Street art craft beer YOLO health goth Shoreditch, Tumblr kogi Williamsburg butcher Godard. Mlkshk wolf keytar skateboard, American Apparel PBR&B kitsch church-key beard. Meh deep v normcore, yr tilde Kickstarter chambray viral. Keytar blog squid migas, church-key post-ironic PBR ugh tousled. Cardigan chia before they sold out, Williamsburg Schlitz pickled Vice viral authentic. Deep v messenger bag tofu, pork belly next level keytar authentic narwhal Blue Bottle meh.</p>
 			</div>
 	</div>
 </div>
-</p>
-
 
 </body>
 </html>
