minor styl changes

--- a/Problem1.html
+++ b/Problem1.html
@@ -58,7 +58,9 @@
             </div>
     <!-- This function will print out all of the prime numbers between 0 and 100 -->
     <body onload="isPrime(100)">
+    <div class= "text center">
     <p id="showIt"></p>
+    </div>
 <script>
 function isPrime(num) {
     // if(num < 2) return false;
