added some comments to question 2, inserted comments into question 3

--- a/Problem2.html
+++ b/Problem2.html
@@ -60,7 +60,7 @@
   </div>
 
 	<div class ="row-fluid">
-		<div class="span4">
+		<div class="span4 contentEditable">
             <p contenteditable="true">
 			Squid bitters Etsy Tumblr, VHS letterpress gluten-free gentrify ugh deep v selvage disrupt cold-pressed. Butcher narwhal scenester Banksy selvage. Leggings typewriter cray pickled synth raw denim, roof party organic farm-to-table sartorial Banksy iPhone. Salvia Truffaut flexitarian, post-ironic vinyl meditation ennui freegan ugh readymade. Bespoke before they sold out church-key, quinoa gastropub paleo organic raw denim lomo. Twee  PBR&B, Helvetica skateboard artisan letterpress. VHS High Life mumblecore chia asymmetrical, blog yr Banksy.
             </p>
@@ -75,6 +75,12 @@
 			</div>
 	</div>
 </div>
+
+<script>
+//plan: write a function with an "if" statement that says: "If paragraph is contenteditable, change to blockquote." Create a button that does this.
+
+
+</script>
 
 </body>
 </html>
