minor text edits to index page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class ="row-fluid">
         <div class="span4">
             <div class="caption-full">
-                <p class="lead">Thank you so much for taking the time to go over my code quiz problems! This little challenge was a lot of fun, and I thoroughly enjoyed piecing these bits of code together to make everything work. I hope that you find that my answers are satisfactory, and I look forward to hearing from you!!
+                <p class="lead">Thank you so much for taking the time to go over my code quiz problems! This challenge has been a lot of fun, and I have thoroughly enjoyed piecing these bits of code together to make everything work. I hope that you find that my answers are satisfactory, and I look forward to hearing from you!!
                 <br>
                 <br>
                 Sincerely,
