--- a/Problem4.html
+++ b/Problem4.html
@@ -7,6 +7,7 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+<div class="container-fluid">
   <!-- Navigation -->
   <nav class="navbar navbar-default" role="navigation">
       <div class="container">
@@ -44,34 +45,31 @@
       <!-- /.container -->
   </nav>
 
-	<div class="row">
+	<div class="row-fluid">
 	    <div class="col-lg-12 text-center">
-	        <h1>Problem Quatre</h1>
+	        <h1>Problem Quatro</h1>
 	        <br>
 	    </div>
 	</div>
 
     <div class ="row-fluid">
 			<div class="span4">
-    		<div class="caption-full text-center">
+    		<div class="caption-full">
 		      <p class="lead"><b>Question:</b> Given the following types of vehicles and their respective capacities: </p>
-							SportsCar ­ small trunk w/100lb capacity
-
-							FamilyCar ­ large trunk w/300lb capacity
-
-							Truck ­ 2 doors, bed w/1500lb capacity
-
-							MiniVan ­ small rear storage area w/200lb capacity
-
-							CargoVan ­ large rear storage area with 800lb capacity
-
+		      <ol type="i">
+					  <li>SportsCar small trunk w/100lb capacity</li>
+					  <li>FamilyCar large trunk w/300lb capacity</li>
+					  <li>Truck ­ 2 doors, bed w/1500lb capacity</li>
+					  <li>MiniVan ­ small rear storage area w/200lb capacity</li>
+					   <li>CargoVan ­ large rear storage area with 800lb capacity</li>
+					</ol>
 						<p class="lead">Write a page/script using object oriented coding style with a text box for each each vehicle type, a text box for the cargo to be allocated, and a calculate button. When the calculate button is clicked a div on the page should have the cargo allocation written to it. Use of utilities like class.js are fine so long as they result in clean and readable js.
 						</p>
 					</div>
 
 
 
-
+</div>
 </body>
 </html>
 
