changes to text question 4

--- a/Problem4.html
+++ b/Problem4.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Problem Quatre</title>
+	<title>Problem Quatro</title>
 
 <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-fluid">
   <!-- Navigation -->
   <nav class="navbar navbar-default" role="navigation">
       <div class="container">
@@ -44,7 +43,7 @@
       </div>
       <!-- /.container -->
   </nav>
-
+<div class="container-fluid">
 	<div class="row-fluid">
 	    <div class="col-lg-12 text-center">
 	        <h1>Problem Quatro</h1>
