added psuedo code to problem 3, started working on problem 4

--- a/Problem3.html
+++ b/Problem3.html
@@ -61,6 +61,18 @@
                 </p>
             </div>
 
+<script>
+
+//psuedoCode:
+//intArr=the integers in the array
+//sumTotal=the number that the integers in the array must add up to
+//findSumPairs=search the array, find values that are equal to sumTotal.
+//This must include an if statement and an add function
+
+var intArr = [-1,0,1,2];
+var sumTotal = sum.intArr
+
+</script>
 
 
 
