--- a/Problem4.html
+++ b/Problem4.html
@@ -66,6 +66,29 @@
 						</p>
 					</div>
 
+<div class ="row-fluid">
+  <div class="span4">
+    <div class="caption-full">
+      <p class="lead"> Vehicle Type</p>
+    <input type="text" id="num1" name="num1" />
+      <p class="lead">Cargo Weight (lbs)</p>
+<input type="text" id="num1" name="num1" />
+<br>
+<input type="button" value="Calculate" onclick="calc()" />
+<br>
+<br>
+</div>
+</div>
+</div>
+
+<input type="text" id="op" name="op" />
+<br>
+<br>
+<input type="text" id="num2" name="num2" />
+<br>
+<input type="button" value="Calculate" onclick="calc()" />
+
+
 
 
 </div>
