--- a/Problem1.html
+++ b/Problem1.html
@@ -58,8 +58,8 @@
             </div>
     <!-- This function will print out all of the prime numbers between 0 and 100 -->
     <body onload="isPrime(100)">
-    <div class= "text center">
-    <p id="showIt"></p>
+ <!--    <div class= "text center">
+    <p id="showIt"></p> -->
     </div>
 <script>
 function isPrime(num) {
@@ -80,23 +80,6 @@ console.log(isPrime(100));
 
 
 
-<!-- <body onload="checkCookies()"> -->
-
-<p id="demo"></p>
-
-<script>
-// function checkCookies() {
-//     var text = "";
-
-//     if (navigator.cookieEnabled == true) {
-//        text = "Cookies are enabled.";
-//     } else {
-//         text = "Cookies are not enabled.";
-//     }
-
-//     document.getElementById("demo").innerHTML = text;
-// }
-</script>
 
 </body>
 </html>
