I think I got the function to work properly

--- a/Problem1.html
+++ b/Problem1.html
@@ -77,7 +77,7 @@ for (var count = 0; count <= 100; count++) {
           notPrime = true;
        }
  }
- //if the opposite is true, then that number is prime. Print thos numbers in the console.
+ //if the opposite is true, then that number is prime. Print those numbers in the console.
     if (notPrime === false) {
                console.log(count);
            }
