--- a/Problem2.html
+++ b/Problem2.html
@@ -62,28 +62,26 @@
 	<div class ="row-fluid">
 		<div class="span4 contentEditable">
             <p contenteditable="true" id="change">
-		YOLO
-            </p>
+		Wes Anderson exercitation +1, fingerstache Banksy et plaid fugiat asymmetrical ullamco do small batch. Minim aesthetic fingerstache food truck semiotics. DIY pop-up distillery, Thundercats small batch paleo aute. Fingerstache Etsy crucifix, adipisicing chia tempor Kickstarter Truffaut. Occupy Echo Park banh mi, beard gastropub 3 wolf moon Odd Future ad occaecat Brooklyn ullamco. Locavore Blue Bottle cold-pressed, cronut ugh duis nulla laborum selfies kogi distillery ennui letterpress sustainable 8-bit. Meggings you probably haven't heard of them occaecat keytar 90's.
+        <br>
+        Kitsch disrupt shabby chic, in et sartorial laboris cornhole Brooklyn hella fanny pack elit 3 wolf moon kale chips culpa. 90's pork belly plaid Pitchfork Brooklyn, wayfarers polaroid paleo deserunt PBR&B ut. Tousled locavore readymade cliche. Commodo sustainable labore, PBR&B pork belly assumenda single-origin coffee exercitation ennui eu Echo Park enim paleo mustache selvage. Pickled authentic put a bird on it, meggings sunt four dollar toast dolor actually distillery mollit do laborum irony. Anim tofu beard paleo. Seitan fingerstache brunch anim Godard ugh health goth, jean shorts cliche crucifix sint freegan.
+        </p>
 	</div>
 </div>
 
 <button onclick="changeToBlockquote()">Change</button>
 
-<script>
-// function changeToBlockquote() {
-//     var str = document.getElementById("change").innerHTML;
-//     var res = str.replace("contenteditable", "Blockquotes");
-//     document.getElementById("change").innerHTML = res;
-// }
-</script>
 
 <script>
 function changeToBlockquote() {
-    var btn = document.getElementById("change");
-    var t = document.createElement("BLOCKQUOTE");
-    btn.appendChild(t);
-    document.body.appendChild(btn);
+
+    var makeBlockquote = document.createElement("BLOCKQUOTE");
+    var paragraph = document.getElementById("change");
+    makeBlockquote.appendChild(paragraph);
+    document.body.appendChild(makeBlockquote);
+
 }
+
 </script>
 
 </body>
