minor style changes

--- a/Problem1.html
+++ b/Problem1.html
@@ -43,6 +43,8 @@
         <!-- /.container -->
     </nav>
 
+<div class="container-fluid">
+
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>Problem Uno</h1>
@@ -50,21 +52,25 @@
             </div>
         </div>
 
-            <div class ="row-fluid">
-        <div class="span4">
-            <div class="caption-full text-center">
-                <p class="lead"><b>Question:</b> Write a function to print out the first 100 prime numbers.
+        <div class ="row-fluid">
+            <div class="span4">
+                <div class="caption-full">
+                    <p class="lead"><b>Question:</b> Write a function to print out the first 100 prime numbers.
+                    </p>
+                </div>
+
+        <div class="row-fluid">
+            <div class="span4">
+                <div class="caption-full">
+                <p class="lead"><b>Answer:</b> 
                 </p>
             </div>
-    <!-- This function will print out all of the prime numbers between 0 and 100 -->
-  <!--   -->
- <!--    <div class= "text center">
-    <p id="showIt"></p> -->
-
+            </div>
+        </div>
 
 <p id ="showNumbers"</p>
 
-
+</div>
 <script>
 
 var showPrimes = function() {
