minor style changes

--- a/Problem2.html
+++ b/Problem2.html
@@ -61,13 +61,15 @@
     <div class="row-fluid">
     <div class="span4">
         <div class="caption-full">
-            <p class="lead"><b>Answer:</b> 
+            <p class="lead"><b>Answer:</b>
             </p>
         </div>
     </div>
   </div>
 
-
+<button onclick="changeToBlockquote()">Change to blockquote</button>
+<br>
+<br>
 	<div class ="row-fluid">
 		<div class="span4 contentEditable">
             <p contenteditable="true" id="change">
@@ -78,8 +80,6 @@
         </p>
 	</div>
 </div>
-
-<button onclick="changeToBlockquote()">Change It!</button>
 
 
 <script>
