working on getting test to pass

--- a/Problem3.html
+++ b/Problem3.html
@@ -61,40 +61,10 @@
                 </p>
             </div>
 
-<script>
-
-//psuedoCode:
-//intArr=the integers in the array
-//sumTotal=the number that the integers in the array must add up to
-//findSumPairs=search the array, find values that are equal to sumTotal.
-//This must include an if statement and an add function
-
-var findSumPairs = function (intArr, sumTotal) {
-  var arrayOfPairs = [];
-  var n = 0;
-  intArr.forEach(function (item, i, array) {
-    array.forEach(function (item, i, array) {
-      console.log(i)
-      if (item + array[i + 1] === sumTotal && arrayOfPairs.indexOf(sumPair) === -1) {
-        var sumPair = [];
-        sumPair[0] = item;
-        sumPair[1] = array[i + 1];
-        arrayOfPairs.push(sumPair);
-        sumPair = [];
-      }
-    });
-  });
-  console.log('The pairs adding to %j are: %j', sumTotal, arrayOfPairs);
-  return arrayOfPairs
-};
-
-module.exports = findSumPairs;
+<!-- Link to js code in another file -->
+<link href="findsumpairs.js">
 
 
-var intArr = [-1,0,1,2];
-var sumTotal = sum.intArr
-
-</script>
 
 
 
