minor text change to problem 4

--- a/Problem4.html
+++ b/Problem4.html
@@ -73,7 +73,7 @@
         <select class="car-select">
         </select>
         <input type="text" class="weight-input">
-        <button type="submit" class="submit-button">Submit</button>
+        <button type="submit" class="submit-button">Calculate</button>
         <div class="result"></div>
     </form>
 
